# Rustbackend

./: .env.example  .gitignore  ARchitecture du projet.md  Audit des Points Faibles Actuels & Risques de Scalabilit.md  DOCUMENTATION GLOBALE D'ARCHITECTURE : ENGINE DE PERMISSIONS & BI.md  DOCUMENTATION TECHNIQUE DE RÉFÉRENCE : BACKEND BI ANALYTICS PLATFORM.md  DOCUMENTATION TECHNIQUE DE RÉFÉRENCE : BACKEND BI ANALYTICS PLATFORM1.md  README.md  docker-compose.yml  📑 Plan de Construction Initial & Tableau de Suivi (Démarrage 0%) #10.md
gateway-auth-go/: Dockerfile  README.md  go.mod  go.sum
gateway-auth-go/cmd/: main.go
gateway-auth-go/ent/: client.go  ent.go  group.go  group_create.go  group_delete.go  group_query.go  group_update.go  mutation.go  permission.go  permission_create.go  permission_delete.go  permission_query.go  permission_update.go  role.go  role_create.go  role_delete.go  role_query.go  role_update.go  runtime.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
metadata-semantic-go/: Dockerfile  README.md  go.mod  go.sum
metadata-semantic-go/cmd/: main.go
orchestrator-sync-rust/: Cargo.toml  Dockerfile  README.md
orchestrator-sync-rust/src/: main.rs
orchestrator-sync-rust/src/mailing/: dispatcher.rs
query-engine-rust/: Cargo.toml  Dockerfile  README.md
query-engine-rust/src/: main.rs
query-engine-rust/src/executor/: mod.rs
query-engine-rust/src/parser/: mod.rs  rls.rs  templating.rs
render-worker/: Cargo.toml  Dockerfile  README.md
render-worker/src/: main.rs
scripts/: test_platform.sh
(+63 files in other folders)
