[package]
name = "orchestrator-sync-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
lettre = { version = "0.11", features = ["tokio-pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
