[package]
name = "query-engine-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
sqlparser = "0.43"
redis = { version = "0.24", features = ["tokio-comp", "pubsub"] }
futures-util = "0.3"
dotenvy = "0.15"
polars = { version = "0.36", features = ["lazy", "parquet"] }
async-trait = "0.1"
