[package]
name = "render-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
chromiumoxide = { version = "0.5", features = ["async-runtime"] }
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
